feat: Complete project implementation, all features finished
- Completed the JavaFX-based graphical user interface
- Implemented game logic and core functionality
- Configured database and data storage
- Optimized the interface and user experience
- Fixed known bugs

Project is ready for packaging and release